# aeruginous-rs

./: .actionlint  .bumpversion.cfg  .clippy.toml  .gitattributes  .gitignore  .justfile  .renovaterc  .renovaterc.json  .renovaterc.json5  .rustfmt.toml  .tarpaulin.toml  CHANGELOG.ron  CHANGELOG.rst  CITATION.cff  Cargo.toml  README.md  bors.toml  clippy.toml  renovate.json  requirements.txt
.github/: CODEOWNERS  aeruginous.asy  aeruginous.cff  dependabot.yml  release.yml  renovate.json
LICENSEs/: README.rst
cffs/: expectation.yml  input_1.cff  input_2.cff  input_4.cff  input_7.cff
changelog.d/: 1238.rst  20230304_153435_41898282+github-actions[bot]_creation.rst  20230304_155157_41898282+github-actions[bot]_cff.rst  20230304_160321_41898282+github-actions[bot]_bots.rst  20230304_161803_41898282+github-actions[bot]_bump2version.rst  20230304_163539_41898282+github-actions[bot]_gpl_headers.rst  20230304_165544_41898282+github-actions[bot]_readme_setup.rst  20230304_172542_41898282+github-actions[bot]_rust_ci.rst  20230305_132024_41898282+github-actions[bot]_rust_init.rst  20230305_174637_41898282+github-actions[bot]_typos.rst  20230306_151233_41898282+github-actions[bot]_sysexits.rst  20230306_162308_41898282+github-actions[bot]_version_allow_v_prefix.rst  20230307_154246_41898282+github-actions[bot]_chrono.rst  20230307_161746_41898282+github-actions[bot]_parallel_rust_ci.rst  20230307_163310_41898282+github-actions[bot]_running_frame.rst  20230308_161342_41898282+github-actions[bot]_clap.rst  20230309_142019_41898282+github-actions[bot]_mirror_readme_with_librs.rst  20230310_132139_41898282+github-actions[bot]_clap_cff.rst  20230310_144554_41898282+github-actions[bot]_keywords.rst  20230310_161407_41898282+github-actions[bot]_unite_action_and_clap_modules.rst  20230311_141743_41898282+github-actions[bot]_move_constants.rst  20230311_170921_41898282+github-actions[bot]_cffreference.rst  20230314_181749_41898282+github-actions[bot]_chrono_cff.rst  20230314_182946_41898282+github-actions[bot]_cffreference_keywords.rst  20230314_184108_41898282+github-actions[bot]_sort_cargo_metadata.rst  20230314_184745_41898282+github-actions[bot]_rs2md_boolean_switch.rst  20230314_191631_41898282+github-actions[bot]_docs_rs_badge.rst  20230315_161255_41898282+github-actions[bot]_installation.rst  20230315_193156_41898282+github-actions[bot]_rust_1_68_0.rst  20230316_192753_41898282+github-actions[bot]_unite_pattern_modules.rst  20230317_173803_41898282+github-actions[bot]_pattern_buffer.rst  20230318_114831_41898282+github-actions[bot]_cff_cff.rst  20230320_103735_41898282+github-actions[bot]_auto_rustfmt_on_pr.rst  20230320_114928_41898282+github-actions[bot]_impl_patternreader_for_stdin.rst  20230320_121631_41898282+github-actions[bot]_impl_patternreader_for_pathbuf.rst  20230320_134050_41898282+github-actions[bot]_impl_patternwriter.rst  20230330_122104_41898282+github-actions[bot]_rust_1_68_2.rst  20230330_123558_41898282+github-actions[bot]_msrv_update_workflow.rst  20230330_163139_41898282+github-actions[bot]_ci_fmt_check.rst  20230331_163925_41898282+github-actions[bot]_typos.rst  (+253 more)
curl-cffref/: action.yml
src/: action.rs  application.rs  cffreference.rs  clap.rs  comment_changes.rs  complain.rs  constants.rs  graph.rs  graph_description.rs  increment_version.rs  io.rs  lib.rs  macros.rs  main.rs  pattern.rs  pattern_io_processor.rs  pattern_reader.rs  pattern_writer.rs  running.rs  ui.rs  utilities.rs  version.rs
tests/: aeruginous_graph_description.rs  append_as_line.rs  cff_create.rs  cffreference.rs  colour_message.rs  comment_changes.rs  complain.rs  convert_buffer.rs  fragment.rs  getters.rs  graph.rs  graph_description.rs  implement.rs  increment_version.rs  macros.rs  pattern_buffer.rs  pattern_writer.rs  prefer.rs  ron_traits.rs  ronlog_action.rs  ronlog_section.rs  running.rs  rusty_object_notation.rs  to_ron.rs  to_stderr.rs  (+4 more)
(+68 files in other folders)
