[dependencies]
aeruginous-io = "0.8.0"
anstyle = "1.0.6"
cargo-lock = "9.0.0"
ron = "0.8.1"
sysexits = "0.7.12"
toml = "0.8.12"

[dependencies.chrono]
features = ["serde"]
version = "0.4.38"

[dependencies.clap]
features = ["derive"]
version = "4.5.4"

[dependencies.git2]
default-features = false
version = "0.18.3"

[dependencies.indexmap]
features = ["serde"]
version = "2.2.6"

[dependencies.quick-xml]
features = ["serialize"]
version = "0.31.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.197"

[features]
cff = ["cff-create"]
cff-create = []
default = ["cff", "utilities"]
mkcws = []
rs2md = []
uncrlf = []
utilities = ["mkcws", "rs2md", "uncrlf"]

[package]
authors = ["Kevin Matthes <aeruginous.rs@gmail.com>"]
categories = ["command-line-utilities", "config", "development-tools", "rust-patterns", "template-engine"]
description = "The Aeruginous Open Source Development Toolbox."
edition = "2021"
homepage = "https://github.com/kevinmatthes/aeruginous-rs"
include = ["/src"]
keywords = ["aeruginous", "changelog", "citation-file-format", "linter", "toolbox"]
license = "GPL-3.0"
name = "aeruginous"
readme = "README.md"
repository = "https://github.com/kevinmatthes/aeruginous-rs"
rust-version = "1.77.2"
version = "3.7.12"
